--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,5 @@
 *.fbx filter=lfs diff=lfs merge=lfs -text
+14lot.fbx filter=lfs diff=lfs merge=lfs -text
+18lot.fbx filter=lfs diff=lfs merge=lfs -text
+3lot.fbx filter=lfs diff=lfs merge=lfs -text
+grasstress.fbx filter=lfs diff=lfs merge=lfs -text
